# talcs-remote

./: CMakeLists.txt
src/: CMakeLists.txt  RemoteAudioSource.cpp  RemoteAudioSource.h  RemoteEditorInterface.cpp  RemoteEditorInterface.h  RemoteProcessInfo.h  RemoteSocket.cpp  RemoteSocket.h  RemoteTransportController.cpp  RemoteTransportController.h
test/: CMakeLists.txt
test/RemoteAudioSource/: CMakeLists.txt  MainComponent.h  main.cpp
test/RemoteSocket/: CMakeLists.txt  main.cpp
